# CrossAndZeros

./: .gitignore  CMakeLists.txt  anotherstylechanger.cpp  anotherstylechanger.h  cross_and_nulls.cpp  cross_and_nulls.h  cross_and_nulls.ui  main.cpp  resources.qrc  style_resources.cpp  style_resources.h
_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
_build/.cmake/api/v1/reply/: cache-v2-3572d456f49b4564e2f5.json  codemodel-v2-1e3ba763a241d128e9c2.json  codemodel-v2-acb46debbf30e378f5e4.json  directory-.-Debug-f995bf3e674f48ab2018.json  index-2022-12-03T16-33-15-0950.json  index-2022-12-29T20-36-42-0355.json  target-Cross_and_Null-Debug-6e364af23bd7fa4d2bfd.json
_build/.cmake/api/v1/reply.prev/: cmakeFiles-v1-e4035b1417a99ebd3694.json  codemodel-v2-f5f99e2adc01e7afd0bd.json  index-2022-12-03T16-21-05-0372.json  target-Cross_and_Null-Debug-51aec8b9a27ecf5626bf.json  target-Cross_and_Null-Debug-c88db3d0fcccac8d3aeb.json  target-Cross_and_Null_autogen-Debug-07b98733f366981a7c96.json  target-Cross_and_Null_autogen_timestamp_deps-Debug-a70c43eab29e868f3571.json
_build/.qtc_clangd/: compile_commands.json
_build/.qtc_clangd/.cache/clangd/index/: QFontDatabase.99B7B0D3DC517465.idx  QTabBar.3914FA4094441ED9.idx  anotherstylechanger.cpp.69F98C086774E2C5.idx  anotherstylechanger.h.F73A8F69584923AD.idx  cross_and_nulls.cpp.367D6C646B585BB7.idx  cross_and_nulls.h.DBE5CED10FF794D0.idx  main.cpp.ED3B2BCF4BC6DAE1.idx  qbuttongroup.h.D0B0A0E6161153DC.idx  qmainwindow.h.AE7198C15B5EA3B7.idx  qtabbar.h.74E8437C53E1719B.idx  qtmetamacros.h.8FF316B193628C4F.idx  style_resources.cpp.F3B04824D042EA96.idx  style_resources.h.E407C9E9C0EF1FFC.idx  ui_cross_and_nulls.h.80205715AA748788.idx
_build/Cross_and_Null_autogen/: deps  mocs_compilation.cpp
_build/Cross_and_Null_autogen/EWIEGA46WW/: moc_cross_and_nulls.cpp  moc_cross_and_nulls.cpp.d  qrc_resources.cpp
_build/Cross_and_Null_autogen/include/: ui_cross_and_nulls.h
